[gd_scene load_steps=2 format=3 uid="uid://bd85i02px3xbu"]

[ext_resource type="Script" uid="uid://c2go8ssu81fls" path="res://Scripts/status_bar.gd" id="1_mux0b"]

[node name="StatusBar" type="Control"]
layout_mode = 3
anchor_top = 0.300926
anchor_right = 1.0
anchor_bottom = 0.699074
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mux0b")
metadata/_edit_use_anchors_ = true

[node name="ManaBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.348837
anchor_right = 1.0
anchor_bottom = 0.651163
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27451, 0.490196, 1, 0.705882)
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0271318
anchor_right = 1.0
anchor_bottom = 0.344961
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6, 0.027451, 0.0156863, 0.705882)
metadata/_edit_use_anchors_ = true

[node name="StaminaBar" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.658915
anchor_right = 1.0
anchor_bottom = 0.767442
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.160784, 0.705882)
metadata/_edit_use_anchors_ = true
